This update includes a number of improvements and bug fixes, including:

• Fixes a problem loading artworks from Safari links.
• Fixes a problem filtering artworks on Category and Auction pages.

Have feedback? Email us at support@artsy.net