@@ -36,7 +36,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>6.6.3</string>
+	<string>6.6.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -69,12 +69,12 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>2019.05.24.09</string>
+	<key>FacebookAdvertiserIDCollectionEnabled</key>
+	<false/>
 	<key>FacebookAppID</key>
 	<string>308278682573501</string>
 	<key>FacebookDisplayName</key>
 	<string>Artsy</string>
-	<key>FacebookAdvertiserIDCollectionEnabled</key>
-	<false/>
 	<key>GITCommitRev</key>
 	<string>4f76194c</string>
 	<key>GITCommitSha</key>
