@@ -1,34 +1,38 @@
 upcoming:
-  version: 6.6.3
+  version: 6.6.4
   date: TBD
   dev:
-    - Connects new My Bids view to causality's lot standings - erik
-    - Continued enhancements for user clarity to My Bids view - erik
-    - Make TS type for app module names - david
-    - Disable idfa collection in Segment - brian
-    - Removes AFNetworking/UIKit subspec - ash
-    - Disable facebook access to idfa - brian
-    - Adds lab option for new inquiry flow - lily
-    - Migrate away from UIWebview - mounir
-    - Add react-native-webview behind flag - brian
-    - Removes more unused Objective-C code - ash
-    - Change IDFA for AppStoreConnect to false - pavlos
-    - Add download option for non-preview-able conversation attachments - sepand
-    - Support switching between environments on login screen - ash, brian, david, mounir, pavlos
     - Move auction CTA button to RN - pavlos
   user_facing:
-    - Fix shows save button - mounir
-    - Add colored indicator dot and adjusted messaging for artwork availability - lily
-    - Fix hidden slider handle bug in refine - brian
-    - Fix app crash when opened from a 404 page - mounir
-    - Fix app crash when tapping fair map - brian
-    - Adds new inquiry buttons and modal behind lab option - lily
-    - Fix new works for you rail sorting- mounir
-    - Fix missing date issue on auctions rail at home - mounir
     - Fix navigation bug on Artwork consign button - david
     - Add auction lots rail to the auctions screen - mounir
 
 releases:
+  - version: 6.6.3
+    date: Sept 16, 2020
+    dev:
+     - Connects new My Bids view to causality's lot standings - erik
+     - Continued enhancements for user clarity to My Bids view - erik
+     - Make TS type for app module names - david
+     - Disable idfa collection in Segment - brian
+     - Removes AFNetworking/UIKit subspec - ash
+     - Disable facebook access to idfa - brian
+     - Adds lab option for new inquiry flow - lily
+     - Migrate away from UIWebview - mounir
+     - Add react-native-webview behind flag - brian
+     - Removes more unused Objective-C code - ash
+     - Change IDFA for AppStoreConnect to false - pavlos
+     - Add download option for non-preview-able conversation attachments - sepand
+     - Support switching between environments on login screen - ash, brian, david, mounir, pavlos
+    user_facing:
+     - Fix shows save button - mounir
+     - Add colored indicator dot and adjusted messaging for artwork availability - lily
+     - Fix hidden slider handle bug in refine - brian
+     - Fix app crash when opened from a 404 page - mounir
+     - Fix app crash when tapping fair map - brian
+     - Adds new inquiry buttons and modal behind lab option - lily
+     - Fix new works for you rail sorting- mounir
+     - Fix missing date issue on auctions rail at home - mounir
   - version: 6.6.2
     date: Sept 1, 2020
     dev:
